--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "online store",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "engines": {
     "node": "14.18.1"
-    },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
